--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,10 @@ body {
 /*
 .header{
     background-color: aqua;
-}*/
-
+}
+/*
 .logo{
-    /*background-color: chartreuse;*/
+    background-color: chartreuse;
     float: left;
     margin-left: 25px;
 }
@@ -17,10 +17,16 @@ body {
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 20px;
     text-decoration: none;
+}*/
+
+.logo img{
+    width: 150px;
+    height: 50px;
+    float: left;
 }
 
 .menu{
-   /* background-color: darkgoldenrod;*/
+    /*background-color: darkgoldenrod;*/
     list-style-type: none;
     padding: 13px;
     text-align: right;
@@ -42,6 +48,9 @@ body {
     text-decoration: none;
 }
 
+.menu li a:hover{
+    color: rgb(173, 110, 83);
+}
 /*
 h1 {
     color: rgb(77, 30, 30);
