--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,21 @@ body {
 .menu li a:hover{
     color: rgb(173, 110, 83);
 }
+
+.hdrink{
+    background-color: #adc178;
+    border: 5px solid rgb(77, 30, 30);
+    margin: 10px; /*Kenar Boşluk*/
+    width: max-content;
+}
+
+#cdrink{
+    background-color: #adc178;
+    border: 5px solid rgb(77, 30, 30);
+    /*margin: 10px;*/
+    padding: 20px; /*İç Boşluk*/
+    width: max-content;
+}
 /*
 h1 {
     color: rgb(77, 30, 30);
