--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,14 @@
 body {
     background-color: rgb(248, 233, 211);
 }
-/*
-.header{
-    background-color: aqua;
-}
-/*
-.logo{
-    background-color: chartreuse;
-    float: left;
-    margin-left: 25px;
-}
 
-.logo a{
-    color: rgb(77, 30, 30);
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    text-decoration: none;
-}*/
-
-.logo img{
+.logo img {
     width: 150px;
     height: 50px;
     float: left;
 }
 
-.menu{
+.menu {
     /*background-color: darkgoldenrod;*/
     list-style-type: none;
     padding: 13px;
@@ -33,14 +16,14 @@ body {
     /*width: max-content;*/
 }
 
-.menu li{
+.menu li {
     /*background-color: blueviolet;*/
     display: inline;
     padding: 15px;
     margin: 20px;
 }
 
-.menu li a{
+.menu li a {
     /*background-color: rgb(43, 203, 64);*/
     color: rgb(77, 30, 30);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -48,64 +31,23 @@ body {
     text-decoration: none;
 }
 
-.menu li a:hover{
+.menu li a:hover {
     color: rgb(173, 110, 83);
 }
 
-.hdrink{
+.hdrink {
     background-color: #adc178;
     border: 5px solid rgb(77, 30, 30);
-    margin: 10px; /*Kenar Boşluk*/
+    margin: 10px;
+    /*Kenar Boşluk*/
     width: max-content;
 }
 
-#cdrink{
+#cdrink {
     background-color: #adc178;
     border: 5px solid rgb(77, 30, 30);
     /*margin: 10px;*/
-    padding: 20px; /*İç Boşluk*/
+    padding: 20px;
+    /*İç Boşluk*/
     width: max-content;
 }
-/*
-h1 {
-    color: rgb(77, 30, 30);
-    text-align: left;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 25px;
-    background-color: deepskyblue;
-    width: max-content;
-    float: left;
-}
-
-.logo a{
-    color: rgb(77, 30, 30);
-    text-align: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 25px;
-    text-decoration: none;
-    width: max-content;
-    padding: 10px;
-    float: left;
-}
-
-.menu ul {
-    list-style-type: none;
-    text-align: right;
-    background-color: blueviolet;
-    float: right;
-}
-
-.menu li {
-    display: inline;
-    padding: 60px;
-    width: max-content;
-    background-color: aquamarine;
-}
-
-.menu ul li a {
-    color: rgb(77, 30, 30);
-    text-decoration: none;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
-    background-color: crimson;
-}*/
