--- a/css/style.css
+++ b/css/style.css
@@ -1,53 +1,94 @@
+html,
 body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
     background-color: rgb(248, 233, 211);
+    display: flex;
+    flex-direction: column;
+}
+
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.logo {
+    height: 100px;
 }
 
 .logo img {
-    width: 150px;
-    height: 50px;
-    float: left;
+    width: 400px;
+    height: 100px;
 }
 
-.menu {
-    /*background-color: darkgoldenrod;*/
+
+nav ul {
     list-style-type: none;
-    padding: 13px;
+    padding: 29px;
+    padding-right: 0;
     text-align: right;
-    /*width: max-content;*/
+
 }
 
-.menu li {
-    /*background-color: blueviolet;*/
+nav ul li {
     display: inline;
-    padding: 15px;
-    margin: 20px;
+    padding: 45px;
 }
 
-.menu li a {
-    /*background-color: rgb(43, 203, 64);*/
+nav ul li a {
     color: rgb(77, 30, 30);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 20px;
+    font-size: 15px;
     text-decoration: none;
 }
 
-.menu li a:hover {
+nav ul li:hover {
+    background-color: rgb(77, 30, 30);
+}
+
+nav ul li:hover a {
     color: rgb(173, 110, 83);
 }
 
-.hdrink {
-    background-color: #adc178;
-    border: 5px solid rgb(77, 30, 30);
-    margin: 10px;
-    /*Kenar Boşluk*/
-    width: max-content;
+footer {
+    background-color: rgb(101, 62, 62);
+    margin: 0;
+    padding: 0;
 }
 
-#cdrink {
-    background-color: #adc178;
-    border: 5px solid rgb(77, 30, 30);
-    /*margin: 10px;*/
-    padding: 20px;
-    /*İç Boşluk*/
-    width: max-content;
+footer .row {
+    display: flex;
+    text-align: center;
+    justify-content: space-around;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+footer .row .footer-col ul {
+    list-style: none;
+    color: white;
+    margin: 0;
+    padding: 0;
+}
+
+footer .row .footer-col ul li a {
+    text-decoration: none;
+    color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+footer .row .footer-col ul li a:hover {
+    text-decoration: underline;
+}
+
+footer .row .footer-col h4 {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 5px;
 }
