--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'MyFont';
+    src: url('../fonts/DancingScript-VariableFont_wght.ttf');
+}
+
 html,
 body {
     margin: 0;
@@ -5,7 +10,7 @@ body {
     width: 100%;
     height: 100%;
     overflow-x: hidden;
-    background-color: rgb(248, 233, 211);
+    background-color: #FEFAE0;
     display: flex;
     flex-direction: column;
 }
@@ -16,7 +21,7 @@ header {
     justify-content: space-between;
 }
 
-.logo {
+header .logo {
     height: 100px;
 }
 
@@ -25,6 +30,20 @@ header {
     height: 100px;
 }
 
+nav {
+    display: flex;
+}
+
+nav .search {
+    width: 100px;
+    height: 20px;
+    margin-top: 40px;
+    border: none;
+    margin-right: 10px;
+    margin-left: 10px;
+    border-bottom: 1px solid #875C35;
+    background-color: #FEFAE0;
+}
 
 nav ul {
     list-style-type: none;
@@ -40,22 +59,56 @@ nav ul li {
 }
 
 nav ul li a {
-    color: rgb(77, 30, 30);
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: #553922;
+    font-family: 'MyFont', sans-serif;
     font-size: 15px;
     text-decoration: none;
+    font-weight: bold;
 }
 
 nav ul li:hover {
-    background-color: rgb(77, 30, 30);
+    background-color: #553922;
+    opacity: 0.9;
 }
 
 nav ul li:hover a {
-    color: rgb(173, 110, 83);
+    color: #FEFAE0;
+}
+
+.img-coffee {
+    position: relative;
+    width: 100%;
+    opacity: 0.9;
+    display: block;
+}
+
+.img-coffee img {
+    height: 100%;
+}
+
+.img-coffee .overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #875d3537;
+    color: #FEFAE0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.img-coffee .overlay .text {
+    font-family: 'MyFont', sans-serif;
+    font-size: 35px;
+    font-weight: bold;
+    text-align: center;
 }
 
 footer {
-    background-color: rgb(101, 62, 62);
+    background-color: #553922;
+    opacity: 0.9;
     margin: 0;
     padding: 0;
 }
@@ -70,25 +123,44 @@ footer .row {
 
 footer .row .footer-col ul {
     list-style: none;
-    color: white;
+    color: #FEFAE0;
     margin: 0;
     padding: 0;
 }
 
 footer .row .footer-col ul li a {
     text-decoration: none;
-    color: white;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: #FEFAE0;
+    font-family: 'MyFont', sans-serif;
 }
 
 footer .row .footer-col ul li a:hover {
     text-decoration: underline;
+    color: #875C35;
 }
 
 footer .row .footer-col h4 {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'MyFont', sans-serif;
     font-size: 15px;
     padding: 0;
     margin: 0;
     margin-bottom: 5px;
+    color: #FEFAE0;
+}
+
+footer .footer-mid {
+    font-family: 'MyFont', sans-serif;
+    text-align: center;
+    color: #FEFAE0;
+    opacity: 0.5;
+}
+
+footer .footer-col .icons {
+    color: #FEFAE0;
+    font-size: 15px;
+    text-align: center;
+}
+
+footer .footer-col .icons i:hover {
+    color: #875C35;
 }
