--- a/css/header.css
+++ b/css/header.css
@@ -1,45 +1,39 @@
 header {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-header .logo {
+    align-items: end;
+    justify-content: space-around;
     height: 100px;
 }
 
 .logo img {
-    width: 400px;
-    height: 100px;
+    width: 100%;
 }
 
 nav {
-    display: flex;
+    width: 100%;
 }
 
-nav .search {
+
+nav ul {
+    display: flex;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+nav ul .search {
     width: 100px;
     height: 20px;
-    margin-top: 40px;
+    margin: 35px 0 0 40px;
     border: none;
     outline: none;
-    margin-right: 10px;
-    margin-left: 10px;
     border-bottom: 1px solid #875C35;
     background-color: #FEFAE0;
 }
 
-nav ul {
-    list-style-type: none;
-    padding: 29px;
-    padding-right: 0;
-    text-align: right;
-
-}
-
 nav ul li {
-    display: inline;
     padding: 45px;
+    margin: 0 15px;
 }
 
 nav ul li a {
