--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 100%;
+    height: auto;
     box-sizing: border-box;
     overflow-x: hidden;
     background-color: #FEFAE0;
